objects/ssot__CareRequestReviewer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareRequestCaseId__c</fullName>
        <label>Care Request Case</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestReferenceId__c</fullName>
        <label>Care Request Reference</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestReferenceObject__c</fullName>
        <label>Care Request Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Request Reviewer Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestReviewStatus__c</fullName>
        <label>Request Review Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewDateTime__c</fullName>
        <label>ReviewDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerId__c</fullName>
        <label>Reviewer</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerNoteText__c</fullName>
        <label>ReviewerNotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerObject__c</fullName>
        <label>Reviewer Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerType__c</fullName>
        <label>ReviewerType</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722509311_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestReviewer_ReviewerId_map_H_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CareRequestReviewer_ReviewerId_map_H_rel</relationshipLabel>
        <relationshipName>rel_1716722509311_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722514582_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestReviewer_ReviewerId_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CareRequestReviewer_ReviewerId_map_U_rel</relationshipLabel>
        <relationshipName>rel_1716722514582_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726053060_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestReviewer_CareRequestRefer_rel</label>
        <referenceTo>ssot__CareRequestDrug__dlm</referenceTo>
        <relationshipLabel>CareRequestReviewer_CareRequestRefer_rel</relationshipLabel>
        <relationshipName>rel_1716726053060_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>